tests/lit/tcheck/function_arg_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function IntFunction(x : Integer)
begin
end

function T()
begin
    IntFunction(True);
// CHECK: Type error: function arguments
end
